# pak

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: bake_pak.rs  load_mesh.rs  load_model.rs
src/: anim.rs  bitmap.rs  bitmap_font.rs  compression.rs  index.rs  lib.rs  mesh.rs  model.rs  scene.rs
src/buf/: anim.rs  asset.rs  bitmap.rs  blob.rs  content.rs  material.rs  mesh.rs  mod.rs  model.rs  scene.rs  writer.rs
tests/: blob.rs  material.rs  scene.rs  source_animation.rs
tests/data/blob/: pak.toml  payload.name.bin.toml  payload.toml
tests/data/scene/: cube.glb  material_01.toml  mesh_01.toml  model_01.toml  pak.toml  scene.toml
