[package]
name = "pak"
version = "0.5.0"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/attackgoat/pak"
homepage = "https://github.com/attackgoat/pak"
documentation = "https://docs.rs/pak"
keywords = ["gamedev"]
categories = ["game-development"]
description = "An easy-to-use data pak format for games."

[features]
default = []
bake = ["bmfont", "glob", "image", "parking_lot", "tokio"]

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bitflags = { version = "2.5", features = ["serde"] }
bmfont = { version = "0.3", default-features = false, optional = true }
brotli = "6.0"
dunce = "1.0"
glam = { version = "0.27", features = ["serde"] }
glob = { version = "0.3", optional = true }
gltf = { version = "1.4", features = ["names"] }
image = { version = "0.25", optional = true }
log = "0.4"
meshopt = "0.2"
mikktspace = "0.3"
parking_lot = { version = "0.12", optional = true }
ordered-float = { version = "4.2", features = ["serde"] }
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
snap = "1.1"
tokio = { version = "1.36", default-features = false, features = [
    "rt-multi-thread",
], optional = true }
toml = "0.8"

[dev-dependencies]
lazy_static = "1.4"
pretty_env_logger = "0.5"

[[example]]
name = "bake_pak"
required-features = ["bake"]
